# powerdns-pythonbackend

./: .hgignore  .hgsub  .hgsubstate  Makefile.am  OBJECTFILES  PyDNSPacket.cc  PyDNSPacket.h  PyDNSPacket.hh  PyDNSResourceRecord.cc  PyDNSResourceRecord.h  PyDomainInfo.cc  PyDomainInfo.h  PyQType.cc  PyQType.h  PySOAData.cc  README  RefCount.h  fiilbackets.sh  loader.cfg  pdns.conf  py-nsupdate  py-nsupdate.thrift  pythonbackend-build.sh  pythonbackend.cc  pythonbackend.hh  rpcserver.thrift
py-nsupdate/: build.sh  fiilbackets.sh  py-nsupdate.py
pymodules/: loader.cfg  loader.py  py-nsupdate  pynsupdate.py  ruslan.py  test.change.py  test.load.py  test.py
pymodules/playrix/powerDNS/: BackendComunicate.py  BackendComunicateProxy.py  __init__.py  g300_net.py  geowithloadbalancewithfailover.py  loadbalancewithfailover.py
pymodules/test/: m.py
pythonbackend/: PyDNSPacket.cc  PyGILLock.cc  PyGILLock.h  PyQType.h  pythonbackend.cc
src/: BorrowRefCount.h  Makefile.am  NewRefCount.h  OBJECTLIBS  PyDNSResourceRecord.cc  PyDomainInfo.cc  PyQType.cc  PySOAData.h  RefCount.h  pythonbackend.cc
test/: test.py
test/test/: m1.py  m2.py  test.m.py
